[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "A Flask app showcase for lightweight tools I have built."
authors = ["Lok Chan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
